[project]
authors = [
  {name = "seonglae", email = "sungle3737@gmail.com"},
]
dependencies = [
    "pip~=23.1.2",
    "langchain~=0.0.201",
    "streamlit-chat~=0.0.2.2",
    "chromadb~=0.3.26",
    "transformers~=4.30.2",
    "InstructorEmbedding~=1.0.1",
    "sentence_transformers~=2.2.2",
    "setuptools~=67.8.0",
    "unstructured~=0.7.5",
    "mypy~=1.3.0",
    "torch~=2.0.1",
    "auto_gptq~=0.2.2",
    "einops~=0.6.1",
    "fire~=0.5.0",
]
description = "People who are Angry face now because of $20 GPT-4"
license = {text = "MIT"}
name = "angryface"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = ["autopep8~=2.0.2"]
managed = true
